--- a/Tasks/imports/ui/body.html
+++ b/Tasks/imports/ui/body.html
@@ -1,3 +1,8 @@
 <body>
-    
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="h1">Tasks</h1>
+            <p class=lead>Simple way to unload your headache to someone else ;)</p>
+        </div>
+    </div>
 </body>
