Added sections to make the structure of the page.

--- a/Tasks/imports/ui/body.html
+++ b/Tasks/imports/ui/body.html
@@ -4,5 +4,9 @@
             <h1 class="h1">Tasks</h1>
             <p class=lead>Simple way to unload your headache to someone else ;)</p>
         </div>
+        <!-- Form to add a task -->
+        {{> addATask}}
+        <!-- Place to show all the task -->
+        {{> allTasks}}
     </div>
 </body>
