--- a/Tasks/imports/ui/addATask.html
+++ b/Tasks/imports/ui/addATask.html
@@ -1,15 +1,21 @@
 <template name="addATask">
     <div class="row">
-        <div class="col-md-10" align="center">
+        <div class="col-md-12">
             <form class="form-vertical">
-                <textarea id="formTask" rows="3" placeholder="Add a task less than 50 words."></textarea>
-                <select id="formAssignedTo">
-                    <option disabled>Assigned To </option>
-                    <option val="Person_A">Person A</option>
-                    <option val="Person_B">Person B</option>
-                    <option val="Person_C">Person C</option>
-                </select>
-                <button type="submit" class="btn btn-default pull-right">Add</button>
+                <div class="col-md-8">
+                    <textarea id="formTask" rows="1" class="form-control" placeholder="Add a task less than 50 words."></textarea>
+                </div>
+                <div class="col-md-3">
+                    <select id="formAssignedTo" class="form-control">
+                        <option selected disabled> Assigned To </option>
+                        <option val="Person_A">Person A</option>
+                        <option val="Person_B">Person B</option>
+                        <option val="Person_C">Person C</option>
+                    </select>
+                </div>
+                <div class="col-md-1">
+                    <button type="submit" class="btn btn-success pull-right form-control">+</button>
+                </div>
             </form>
         </div>
     </div>
