Added id to the button.

--- a/Tasks/imports/ui/addATask.html
+++ b/Tasks/imports/ui/addATask.html
@@ -2,19 +2,19 @@
     <div class="row">
         <div class="col-md-12">
             <form class="form-vertical">
-                <div class="col-md-8">
+                <div class="col-md-8" >
                     <textarea id="formTask" rows="1" class="form-control" placeholder="Add a task less than 50 words."></textarea>
                 </div>
                 <div class="col-md-3">
                     <select id="formAssignedTo" class="form-control">
-                        <option selected disabled> Assigned To </option>
+                        <option selected disabled>Assigned To</option>
                         <option val="Person_A">Person A</option>
                         <option val="Person_B">Person B</option>
                         <option val="Person_C">Person C</option>
                     </select>
                 </div>
                 <div class="col-md-1">
-                    <button type="submit" class="btn btn-success pull-right form-control">+</button>
+                    <button type="submit" class="btn btn-success form-control" id="formSubmit">+</button>
                 </div>
             </form>
         </div>
