- Added an outer div to give it a bottom boundary. - Assigned id to the form.

--- a/Tasks/imports/ui/addATask.html
+++ b/Tasks/imports/ui/addATask.html
@@ -1,7 +1,8 @@
 <template name="addATask">
+    <div id="addATaskOuterDiv">
     <div class="row">
         <div class="col-md-12">
-            <form class="form-vertical">
+            <form class="form-vertical" id="addATaskForm">
                 <div class="col-md-8" >
                     <textarea id="formTask" rows="1" class="form-control" placeholder="Add a task less than 50 words."></textarea>
                 </div>
@@ -19,4 +20,5 @@
             </form>
         </div>
     </div>
+</div>
 </template>
