--- a/Tasks/imports/ui/allTasks.html
+++ b/Tasks/imports/ui/allTasks.html
@@ -1,4 +1,27 @@
 <template name="allTasks">
-    <div class="row">
+    <div class="row" id="allTasksList">
+        <div class="col-md-10 col-md-offset-1">
+            <!-- Task
+                 Assigned by
+                 Assigned to
+                 Date
+                 Status -->
+            <div class="title" style="font-size:1em">
+                <div class="col-md-5" >
+                    <p>Task</p>
+                </div>
+                <div class="col-md-3">
+                    <p>Assigned By</p>
+                </div>
+                <div class="col-md-3">
+                    <p>Assigned To</p>
+                </div>
+                <div class="col-md-1" style="border:none">
+                    <p>When</p>
+                </div>
+            </div>
+            <div>
+            </div>
+        </div>
     </div>
 </template>
