Changed the structure to tables instead.

--- a/Tasks/imports/ui/allTasks.html
+++ b/Tasks/imports/ui/allTasks.html
@@ -1,27 +1,18 @@
 <template name="allTasks">
     <div class="row" id="allTasksList">
-        <div class="col-md-10 col-md-offset-1">
-            <!-- Task
-                 Assigned by
-                 Assigned to
-                 Date
-                 Status -->
-            <div class="title" style="font-size:1em">
-                <div class="col-md-5" >
-                    <p>Task</p>
-                </div>
-                <div class="col-md-3">
-                    <p>Assigned By</p>
-                </div>
-                <div class="col-md-3">
-                    <p>Assigned To</p>
-                </div>
-                <div class="col-md-1" style="border:none">
-                    <p>When</p>
-                </div>
-            </div>
-            <div>
-            </div>
+        <div class="col-md-12">
+            <table class="table table-condensed table-hover">
+                <thead>
+                    <tr>
+                        <td class="col-md-6">Task</td>
+                        <td>Assigned To</td>
+                        <td>Assigned By</td>
+                        <td>Date</td>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
         </div>
     </div>
 </template>
