Added a sample task to see how it looks.

--- a/Tasks/imports/ui/allTasks.html
+++ b/Tasks/imports/ui/allTasks.html
@@ -11,6 +11,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {{>singleTask task="Help Me God" assignedBy="Me" assignedTo="You" date="today"}}
                 </tbody>
             </table>
         </div>
