--- a/Tasks/imports/ui/body.html
+++ b/Tasks/imports/ui/body.html
@@ -4,9 +4,18 @@
             <h1 class="h1">Tasks</h1>
             <p class=lead>Simple way to unload your headache to someone else ;)</p>
         </div>
-        <!-- Form to add a task -->
-        {{> addATask}}
-        <!-- Place to show all the task -->
-        {{> allTasks}}
+        {{ #if currentUser }}
+            <!-- Form to add a task -->
+            {{> addATask}}
+            <!-- Place to show all the task -->
+            {{> allTasks}}
+        {{else}}
+            <div class="col-md-6 col-md-offset-3" align="center">
+                <h4> To use the app Signin/Signup first. </h4>
+            </div>
+            <div class="col-md-2 col-md-offset-5" id="loginBox" align="center">
+                {{> loginButtons}}
+            </div>
+        {{ /if }}
     </div>
 </body>
