Added style to the support text in the form.

--- a/Tasks/imports/ui/addATask.html
+++ b/Tasks/imports/ui/addATask.html
@@ -18,7 +18,7 @@
             <form class="form-vertical" id="addATaskForm">
                 <div class="col-md-8">
                     <input id="formTask" rows="1" maxlength="140" class="form-control" placeholder="Add a task less than 140 characters.">
-                    <p class="pull-right">Characters Left: <span id="remainCharacter">140</span></p>
+                    <p class="pull-right" id="supportText">Characters Left: <span id="remainCharacter">140</span></p>
                 </div>
                 <div class="col-md-3">
                     <select id="formAssignedTo" class="form-control">
