Added color according to status of the task.

--- a/Tasks/imports/ui/singleTask.html
+++ b/Tasks/imports/ui/singleTask.html
@@ -1,8 +1,8 @@
 <template name="singleTask">
-    <tr>
-        <td>{{task}}</td>
-        <td>{{assignedBy}}</td>
-        <td>{{assignedTo}}</td>
-        <td>{{date}}</td>
+    <tr class="{{ GetStatus Task.status }}">
+        <td>{{Task.task}}</td>
+        <td>{{Task.assignedBy}}</td>
+        <td>{{Task.assignedTo}}</td>
+        <td>{{Task.dateOfAssignment}}</td>
     </tr>
 </template>
