- Added another table to show tasks assigned by the user.

--- a/Tasks/imports/ui/allTasks.html
+++ b/Tasks/imports/ui/allTasks.html
@@ -3,18 +3,34 @@
         <div class="col-md-12">
             <table class="table table-condensed table-hover">
                 <thead>
-                    <tr align="center">
-                        <td class="col-md-6"><strong>Task</strong></td>
+                    <tr>
+                        <td><strong>Task</strong></td>
                         <td><strong>Assigned By</strong></td>
                         <td><strong>Date</strong></td>
                     </tr>
                 </thead>
                 <tbody>
-                    {{#each AllTasks}}
+                    {{#each AllTasks "Reciever"}}
                         {{>singleTask Task=this}}
                     {{/each}}
                 </tbody>
             </table>
         </div>
+        <div class="col-md-12">
+                <table class="table table-condensed table-hover">
+                    <thead>
+                        <tr>
+                            <td><strong>Task</strong></td>
+                            <td><strong>Assigned To</strong></td>
+                            <td><strong>Date</strong></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each AllTasks "Assigner"}}
+                            {{>singleTask Task=this}}
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
     </div>
 </template>
