Formatted date to dd-mm-yyyy.

--- a/Tasks/imports/ui/singleTask.html
+++ b/Tasks/imports/ui/singleTask.html
@@ -2,6 +2,6 @@
     <tr class="{{ GetStatus Task.status }}">
         <td>{{Task.task}}</td>
         <td>{{Task.assignedBy}}</td>
-        <td>{{Task.dateOfAssignment}}</td>
+        <td>{{ExtractDate Task.dateOfAssignment}}</td>
     </tr>
 </template>
