--- a/Tasks/imports/ui/navigationBar.html
+++ b/Tasks/imports/ui/navigationBar.html
@@ -9,10 +9,10 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {{#if currentUser}}
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Out</a></li>
+                    <li><a id="signOut"><span class="glyphicon glyphicon-user"></span>Sign Out</a></li>
                 {{else}}
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+                    <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Login</a></li> -->
                 {{/if}}
             </ul>
         </div>
