--- a/Tasks/imports/ui/allTasks.html
+++ b/Tasks/imports/ui/allTasks.html
@@ -50,6 +50,7 @@
                     </table>
                 </div>
             </div>
+            {{> taskEditForm }}
         </div>
     </div>
 </template>
