--- a/Tasks/imports/ui/singleTask.html
+++ b/Tasks/imports/ui/singleTask.html
@@ -20,7 +20,7 @@
             <td>
                 {{Task.task}}
                 {{#if IsTaskPending Task.status}}
-                    <a class="btn btn-link">
+                    <a class="btn btn-link" id="editTask" data-id="{{Task._id}}" data-toggle="modal" data-target="#taskEditForm">
                         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                     </a>
                 {{/if}}
